# beanbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_py311.txt  setup.py
.github/: actions.yml
.github/workflows/: actions-dispatcher.yml  actions.yml
app/: run_beanbot.py
data/file_editor/: test_append_expect.txt  test_replace_expect.txt
data/ledger/: main.bean  main_noid.bean
frontend/: package-lock.json  package.json  tsconfig.json
frontend/beanbot-ui/: package-lock.json  package.json  vite.config.js
frontend/beanbot-ui/src/: App.vue  BeancountTable.vue  main.js
frontend/beanbot-ui/src/assets/: theme.css
frontend/beanbot-ui/src/components/: BeancountEditor.vue  BeancountEditorPrime.vue
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/table-demo/: columns.tsx  data-table.tsx  datasource.ts  page.tsx
frontend/src/components/ui-composition/: batch-edit.tsx  category-selector.tsx
scripts/ ingest/: dkb_download_transactions.py
src/beanbot/backend/: beanbot_api.py  beanbot_json_encoder.py  data.py  pagination.py  predictor.py  serialization.py
src/beanbot/classifier/: abstract_transaction_classifier.py  decision_tree_transaction_classifier.py  mapping_transaction_classifier.py  meta_transaction_classifier.py  transformer_knn_classifier.py
src/beanbot/common/: collections.py  configs.py  types.py
src/beanbot/data/: adapter.py  constants.py  container.py  directive.py  directive_test.py  entries.py  hashing.py  hashing_test.py  pydantic_serialization.py  serialization.py
src/beanbot/file/: saver.py  text_editor.py
src/beanbot/helper/: log.py
src/beanbot/importer/: alipay.py  bank_of_china.py  citic.py  csv_importer.py  deutsche_bank.py  dkb.py  hooks.py
src/beanbot/ledger/: ledger.py  ledger_test.py  text_editor.py  text_editor_test.py
src/beanbot/model/: transformer_knn_classifier.py
src/beanbot/ops/: booking.py  conditions.py  dedup.py  extractor.py  file_saver.py  filter.py  hashing.py
src/beanbot/query/: condition.py  condition_test.py
src/beanbot/session/: session.py  session_test.py
src/beanbot/tests/: dataloader.py  dataset.py  metrics.py
src/beanbot/ui/: factory.py
src/beanbot/utils/: id.py  id_generator.py  id_generator_test.py  id_test.py  log.py
src/beanbot/vectorizer/: abstract_vectorizer.py  bag_of_words_vectorizer.py
tests/: test_beanbot.py  test_directive.py  test_serialization.py  test_text_editor.py
tests/data/: import.config  main.bean
tests/data/expected/importer/: alipay.bean
tests/data/file_editor/: test_delete_expect.txt  test_insert_expect.txt  test_rel_delete_expect.txt
tests/data/raw/alipay/transactions/foo@bar.com/: alipay_record_20240101_0000_1.csv
tests/data/raw/deutsche_bank/transactions/0000/: Transaktionen_29-01-2022.csv
tests/importer/: test_alipay.py
